--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0",
-    "three-globe": "^2.42.2"
+    "three-globe": "^2.42.2",
+    "three-stdlib": "^2.35.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
